tests/anchor-events/tests/snapshots/invite_escrow__check_events_protobuf_schema.snap
---
source: tests/anchor-events/tests/invite_escrow.rs
expression: "invite_escrow_events::PROTOBUF_SCHEMA"
---
syntax = "proto3";

package invite_escrow_events;

message PublicKey {
  bytes value = 1;
}
    
message InitializeAccounts {
  repeated PublicKey remaining_accounts = 1;
}
    
message InitializeArgs {
  PublicKey sender = 1;
  PublicKey invite_signer = 2;
  uint64 amount = 3;
  int64 expiration = 4;
}
    
message Initialize {
  InitializeAccounts accounts = 1;
  InitializeArgs args = 2;
}
    
message ClaimAccounts {
  repeated PublicKey remaining_accounts = 1;
}
    
message ClaimArgs {
  PublicKey claimer = 1;
  PublicKey sender = 2;
  PublicKey invite_signer = 3;
  uint64 amount = 4;
}
    
message Claim {
  ClaimAccounts accounts = 1;
  ClaimArgs args = 2;
}
    
message ClawbackAccounts {
  repeated PublicKey remaining_accounts = 1;
}
    
message ClawbackArgs {
  PublicKey sender = 1;
  uint64 amount = 2;
}
    
message Clawback {
  ClawbackAccounts accounts = 1;
  ClawbackArgs args = 2;
}
    
message ExpireAccounts {
  repeated PublicKey remaining_accounts = 1;
}
    
message ExpireArgs {
  PublicKey sender = 1;
  uint64 amount = 2;
  int64 expiration = 3;
}
    
message Expire {
  ExpireAccounts accounts = 1;
  ExpireArgs args = 2;
}
    
message InitializeTokenAccounts {
  repeated PublicKey remaining_accounts = 1;
}
    
message InitializeTokenArgs {
  PublicKey sender = 1;
  PublicKey invite_signer = 2;
  uint64 amount = 3;
  int64 expiration = 4;
  PublicKey mint = 5;
}
    
message InitializeToken {
  InitializeTokenAccounts accounts = 1;
  InitializeTokenArgs args = 2;
}
    
message ClaimTokenAccounts {
  repeated PublicKey remaining_accounts = 1;
}
    
message ClaimTokenArgs {
  PublicKey claimer = 1;
  PublicKey sender = 2;
  PublicKey invite_signer = 3;
  uint64 amount = 4;
  PublicKey mint = 5;
}
    
message ClaimToken {
  ClaimTokenAccounts accounts = 1;
  ClaimTokenArgs args = 2;
}
    
message ClawbackTokenAccounts {
  repeated PublicKey remaining_accounts = 1;
}
    
message ClawbackTokenArgs {
  PublicKey sender = 1;
  uint64 amount = 2;
  PublicKey mint = 3;
}
    
message ClawbackToken {
  ClawbackTokenAccounts accounts = 1;
  ClawbackTokenArgs args = 2;
}
    
message ExpireTokenAccounts {
  repeated PublicKey remaining_accounts = 1;
}
    
message ExpireTokenArgs {
  PublicKey sender = 1;
  uint64 amount = 2;
  PublicKey mint = 3;
  int64 expiration = 4;
}
    
message ExpireToken {
  ExpireTokenAccounts accounts = 1;
  ExpireTokenArgs args = 2;
}
    
message Instructions {
  oneof instruction {
    Initialize initialize = 1;
    Claim claim = 2;
    Clawback clawback = 3;
    Expire expire = 4;
    InitializeToken initialize_token = 5;
    ClaimToken claim_token = 6;
    ClawbackToken clawback_token = 7;
    ExpireToken expire_token = 8;
  }
}
