tests/anchor-events/tests/snapshots/invite_escrow__check_merged_protobuf_schema.snap
---
source: tests/anchor-events/tests/invite_escrow.rs
expression: schema
---
syntax = "proto3";

message PublicKey {
  bytes value = 1;
}

message InviteInfo {
  PublicKey sender = 1;
  int64 expiry = 2;
}

message InviteInfoToken {
  PublicKey sender = 1;
  PublicKey invite_signer = 2;
  PublicKey escrow_token_account = 3;
  int64 expiry = 4;
  uint32 bump = 5;
  bytes padding = 6;
}

message InitializeAccountsStruct {
  PublicKey sender = 1;
  PublicKey invite_signer = 2;
  PublicKey invite_info = 3;
  PublicKey system_program = 4;
  repeated PublicKey remaining_accounts = 5;
}

message InitializeArgsStruct {
  int64 expiry = 1;
  uint64 amount = 2;
}

message InitializeStruct {
  InitializeAccountsStruct accounts = 1;
  InitializeArgsStruct args = 2;
}

message ClaimAccountsStruct {
  PublicKey invite_info = 1;
  PublicKey invite_signer = 2;
  PublicKey claimer = 3;
  PublicKey system_program = 4;
  PublicKey keeper = 5;
  repeated PublicKey remaining_accounts = 6;
}

message ClaimArgsStruct {
}

message ClaimStruct {
  ClaimAccountsStruct accounts = 1;
  ClaimArgsStruct args = 2;
}

message ClawbackAccountsStruct {
  PublicKey invite_info = 1;
  PublicKey sender = 2;
  repeated PublicKey remaining_accounts = 3;
}

message ClawbackArgsStruct {
}

message ClawbackStruct {
  ClawbackAccountsStruct accounts = 1;
  ClawbackArgsStruct args = 2;
}

message ExpireAccountsStruct {
  PublicKey invite_info = 1;
  PublicKey sender = 2;
  PublicKey keeper = 3;
  repeated PublicKey remaining_accounts = 4;
}

message ExpireArgsStruct {
}

message ExpireStruct {
  ExpireAccountsStruct accounts = 1;
  ExpireArgsStruct args = 2;
}

message InitializeTokenAccountsStruct {
  PublicKey sender = 1;
  PublicKey invite = 2;
  PublicKey invite_info = 3;
  PublicKey system_program = 4;
  PublicKey sender_token_account = 5;
  PublicKey escrow_token_account = 6;
  PublicKey token_program = 7;
  PublicKey mint = 8;
  PublicKey associated_token_program = 9;
  repeated PublicKey remaining_accounts = 10;
}

message InitializeTokenArgsStruct {
  int64 expiry = 1;
  uint64 amount = 2;
}

message InitializeTokenStruct {
  InitializeTokenAccountsStruct accounts = 1;
  InitializeTokenArgsStruct args = 2;
}

message ClaimTokenAccountsStruct {
  PublicKey invite_info = 1;
  PublicKey invite_signer = 2;
  PublicKey claimer = 3;
  PublicKey system_program = 4;
  PublicKey keeper = 5;
  PublicKey claimer_token_account = 6;
  PublicKey escrow_token_account = 7;
  PublicKey token_program = 8;
  PublicKey mint = 9;
  PublicKey associated_token_program = 10;
  repeated PublicKey remaining_accounts = 11;
}

message ClaimTokenArgsStruct {
}

message ClaimTokenStruct {
  ClaimTokenAccountsStruct accounts = 1;
  ClaimTokenArgsStruct args = 2;
}

message ClawbackTokenAccountsStruct {
  PublicKey invite_info = 1;
  PublicKey sender = 2;
  PublicKey sender_token_account = 3;
  PublicKey escrow_token_account = 4;
  PublicKey token_program = 5;
  PublicKey associated_token_program = 6;
  PublicKey system_program = 7;
  PublicKey mint = 8;
  repeated PublicKey remaining_accounts = 9;
}

message ClawbackTokenArgsStruct {
}

message ClawbackTokenStruct {
  ClawbackTokenAccountsStruct accounts = 1;
  ClawbackTokenArgsStruct args = 2;
}

message ExpireTokenAccountsStruct {
  PublicKey invite_info = 1;
  PublicKey sender = 2;
  PublicKey sender_token_account = 3;
  PublicKey escrow_token_account = 4;
  PublicKey token_program = 5;
  PublicKey associated_token_program = 6;
  PublicKey system_program = 7;
  PublicKey mint = 8;
  PublicKey keeper = 9;
  repeated PublicKey remaining_accounts = 10;
}

message ExpireTokenArgsStruct {
}

message ExpireTokenStruct {
  ExpireTokenAccountsStruct accounts = 1;
  ExpireTokenArgsStruct args = 2;
}

message InviteEscrowAccount {
  oneof account {
    InviteInfo invite_info = 1;
    InviteInfoToken invite_info_token = 2;
  }
}

message Instructions {
  oneof instruction {
    InitializeStruct initialize = 1;
    ClaimStruct claim = 2;
    ClawbackStruct clawback = 3;
    ExpireStruct expire = 4;
    InitializeTokenStruct initialize_token = 5;
    ClaimTokenStruct claim_token = 6;
    ClawbackTokenStruct clawback_token = 7;
    ExpireTokenStruct expire_token = 8;
  }
}

message InitializeAccounts {
  repeated PublicKey remaining_accounts = 1;
}

message InitializeArgs {
  PublicKey sender = 1;
  PublicKey invite_signer = 2;
  uint64 amount = 3;
  int64 expiration = 4;
}

message Initialize {
  InitializeAccounts accounts = 1;
  InitializeArgs args = 2;
}

message ClaimAccounts {
  repeated PublicKey remaining_accounts = 1;
}

message ClaimArgs {
  PublicKey claimer = 1;
  PublicKey sender = 2;
  PublicKey invite_signer = 3;
  uint64 amount = 4;
}

message Claim {
  ClaimAccounts accounts = 1;
  ClaimArgs args = 2;
}

message ClawbackAccounts {
  repeated PublicKey remaining_accounts = 1;
}

message ClawbackArgs {
  PublicKey sender = 1;
  uint64 amount = 2;
}

message Clawback {
  ClawbackAccounts accounts = 1;
  ClawbackArgs args = 2;
}

message ExpireAccounts {
  repeated PublicKey remaining_accounts = 1;
}

message ExpireArgs {
  PublicKey sender = 1;
  uint64 amount = 2;
  int64 expiration = 3;
}

message Expire {
  ExpireAccounts accounts = 1;
  ExpireArgs args = 2;
}

message InitializeTokenAccounts {
  repeated PublicKey remaining_accounts = 1;
}

message InitializeTokenArgs {
  PublicKey sender = 1;
  PublicKey invite_signer = 2;
  uint64 amount = 3;
  int64 expiration = 4;
  PublicKey mint = 5;
}

message InitializeToken {
  InitializeTokenAccounts accounts = 1;
  InitializeTokenArgs args = 2;
}

message ClaimTokenAccounts {
  repeated PublicKey remaining_accounts = 1;
}

message ClaimTokenArgs {
  PublicKey claimer = 1;
  PublicKey sender = 2;
  PublicKey invite_signer = 3;
  uint64 amount = 4;
  PublicKey mint = 5;
}

message ClaimToken {
  ClaimTokenAccounts accounts = 1;
  ClaimTokenArgs args = 2;
}

message ClawbackTokenAccounts {
  repeated PublicKey remaining_accounts = 1;
}

message ClawbackTokenArgs {
  PublicKey sender = 1;
  uint64 amount = 2;
  PublicKey mint = 3;
}

message ClawbackToken {
  ClawbackTokenAccounts accounts = 1;
  ClawbackTokenArgs args = 2;
}

message ExpireTokenAccounts {
  repeated PublicKey remaining_accounts = 1;
}

message ExpireTokenArgs {
  PublicKey sender = 1;
  uint64 amount = 2;
  PublicKey mint = 3;
  int64 expiration = 4;
}

message ExpireToken {
  ExpireTokenAccounts accounts = 1;
  ExpireTokenArgs args = 2;
}

message ProgramEvents {
  oneof instruction {
    Initialize initialize = 1;
    Claim claim = 2;
    Clawback clawback = 3;
    Expire expire = 4;
    InitializeToken initialize_token = 5;
    ClaimToken claim_token = 6;
    ClawbackToken clawback_token = 7;
    ExpireToken expire_token = 8;
  }
}

message ProgramEventOutput {
  optional Instructions instruction = 1;
  repeated ProgramEvents program_events = 2;
}
